--- a/css/site.css
+++ b/css/site.css
@@ -48,7 +48,7 @@ article {
 	margin: 25px auto;
 	width: 1000px;
 	color: #888;
-	padding: 25px 0 50px 0;
+	padding: 25px 10px 50px;
 }
 .article-header {
 	border-bottom: 1px solid #aaa;
